Fix spacing

--- a/client/web/src/repo/RepoRevisionContainer.scss
+++ b/client/web/src/repo/RepoRevisionContainer.scss
@@ -58,4 +58,13 @@
             border-top-right-radius: 0.1875rem;
         }
     }
+
+    &__divider {
+        margin-right: 0.25rem;
+
+        .theme-redesign & {
+            margin-left: 0.375rem;
+            margin-right: 0.375rem;
+        }
+    }
 }
